# ocrstack

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_docs.yml  flake8.yml  workflow.yml
docs/: conf.py  index.rst  requirements.txt
docs/modules/: data.rst  engine.rst  loss.rst  metrics.rst  models.rst
docs/tutorials/: crnn.rst  custom_dataset.rst
ocrstack/: __init__.py
ocrstack/config/: __init__.py  base_crnn.yaml  base_seq2seq.yaml  base_trainer.yaml  config.py  trainer.py
ocrstack/core/: builder.py  loading.py  registry.py  typing.py
ocrstack/data/: __init__.py  collate.py  dataset.py  vocab.py
ocrstack/engine/: attention_visualizer.py  checkpoint.py  evaluator.py  logger.py  seq2seq_infer.py  seq2seq_trainer.py  trainer.py  utils.py  visualizer.py  visualseq_infer.py  visualseq_trainer.py
ocrstack/logger/: baselogger.py
ocrstack/loss/: __init__.py  cross_entropy_loss.py  ctc_loss.py  label_smooth_loss.py
ocrstack/metrics/: __init__.py  metric.py  ocr.py
ocrstack/model/: __init__.py  crnn.py  seq2seq.py
ocrstack/models/: __init__.py  base.py  conv_attn_rnn.py  conv_rnn.py  conv_seq2seq.py  seq2seq.py  utils.py
ocrstack/ops/: attention_lstm.py  collapse.py  positional_encoding.py  sequence_decoder.py  sequence_encoder.py  transformer.py
ocrstack/opts/: attention.py  multihead_attention.py  positional_encoding.py  (+3 more)
test/: common_utils.py  test_backbone.py  test_builder.py  test_embedding.py  test_losses.py  test_recognition_modules.py
(+70 files in other folders)
