[metadata]
name = ocrstack
version = 0.0.5
author= VinhLoiIT
author_email= vinhloiit1327@gmail.com
description = A simple OCR package
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pytorch OCR
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
url = https://github.com/vinhloiit/ocrstack
